<resources>
    <string name="app_name">ShotPal</string>
    <string name="title_timer">Timer</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="start">Start</string>
    <string name="par_time_seconds">Par Time (seconds)</string>
    <string name="delay">Delay</string>
    <string name="mode">Mode</string>
    <string name="live_fire">Live Fire</string>
    <string name="co2_dry">CO2 Dry</string>
    <string name="dry_fire">Dry Fire</string>
    <string name="airsoft">Airsoft</string>
    <string name="end_time">End Time</string>
    <string name="less_than_9mm"><![CDATA[< 9mm]]></string>
    <string name="equal_to_9mm">9mm</string>
    <string name="larger_than_9mm"><![CDATA[> 9mm]]></string>
    <string name="retry">Retry</string>
    <string name="diff_to_par">Diff to Par</string>
    <string name="shots">Shots</string>
    <string name="avg_split">Avg Split</string>
    <string name="shots_count">Shots Count</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="example_username">Example Username</string>
    <string name="session_history">Session History</string>
    <string name="best_records">Best Records</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="mic_only">Mic Only</string>
    <string name="imu_only">IMU Only</string>
    <string name="mic_imu">Mic + IMU</string>
    <string name="tracking_mode">Tracking Mode</string>
    <string name="imu_calibration">IMU calibration</string>
    <string name="start_signal">Start Signal</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="sound_vibration">Sound + Vibration</string>
    <string name="reset_default_setting">Reset Default Setting</string>
    <string name="ammo_caliber">Ammo Caliber</string>
    <string name="time_counting">Time Counting</string>
    <string name="recent_shot">Recent Shot</string>
    <string name="split_time">Split Time</string>
    <string name="stop">Stop</string>
    <string name="zero">0</string>
    <string name="zero_decimal">0.0</string>
    <string name="no_shots_detected">No Shots Detected</string>
    <string name="zero_time">00:00.000</string>
    <string name="to">-</string>
    <string name="s">s</string>
</resources>