<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timer">

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.cs407.shotpal.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cs407.shotpal.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cs407.shotpal.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_retry"
        android:name="com.cs407.shotpal.ui.timer.RetryFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_retry" />

    <fragment
        android:id="@+id/navigation_stop"
        android:name="com.cs407.shotpal.ui.timer.StopFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_stop"/>


</navigation>